samples/_failures_safe/1761395910_bdd157_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3cf03db3.c: In function ‘main’:
./samples/SAFE/__tmp_3cf03db3.c:149:17: error: expected ‘;’ at end of input
  149 |     print_matrix
      |                 ^
      |                 ;
./samples/SAFE/__tmp_3cf03db3.c:149:5: error: expected declaration or statement at end of input
  149 |     print_matrix
      |     ^~~~~~~~~~~~
